fix(core): harden SPI and error model
Address review findings: HelmException cause-chaining + null-safe maps across all subclasses; SessionStore optimistic concurrency (SessionConflictException); Store SPI pagination overloads; WorkQueue.complete requires terminal OperationStatus (+CANCELLED/INTERRUPTED); JsonSchema supports UUID/Instant/BigDecimal/Set/temporal; ToolContext expanded (securityContext/sandbox/clock/logger); ModelStreamEvent.Completed finishReason + TokenUsage cache/reasoning fields; HelmAction +TOOL_EXECUTE/MEMORY_WRITE/SANDBOX_COMMAND; AcquisitionResult OptionalLong; RateLimitKey validates dimension; AgentConfig defaults sandbox to Sandbox.disabled(); OperationRecord.type->HelmAction, RuntimeEventRecord.type->RuntimeEventType, input/output->String; ToolResultBlock.from(ToolResult); WorkflowContext operationId/clock/event; RuntimeEventObserver contract; drop unused jackson-annotations.